its resume time!

--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,20 @@
         <meta name="robots" content="index, follow">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <!--TODO:Meta-->
+        <meta name="author" content="Wo-r">
+        <meta name="title" content="Wo-r"/>
+        <meta name="language" content="English">
+        <meta name="description" content="This is my personal website, designed and curated by me to serve as the hub for everything related to me. This includes my resume, certifications, and education, as well as my personal blogs and other miscellaneous content."/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:url" content="https://wo-r.github.io/"/>
+        <meta property="og:title" content="Wo-r"/>
+        <meta property="og:description" content="This is my personal website, designed and curated by me to serve as the hub for everything related to me. This includes my resume, certifications, and education, as well as my personal blogs and other miscellaneous content."/>
+        <meta property="og:image" content="./../src/logo/logo-full.jpg"/>
+        <meta property="twitter:card" content="summary_large_image"/>
+        <meta property="twitter:url" content="https://wo-r.github.io/"/>
+        <meta property="twitter:title" content="Wo-r"/>
+        <meta property="twitter:description" content="This is my personal website, designed and curated by me to serve as the hub for everything related to me. This includes my resume, certifications, and education, as well as my personal blogs and other miscellaneous content."/>
+        <meta property="twitter:image" content="./../src/logo/logo-full.jpg"/>
         <script src="./../src/third/jquery.min.js"></script>
         <script src="./../src/third/tailwind.min.js"></script>
         <script>
@@ -19,21 +32,94 @@
                             nunitoblack: ['NunitoBlack', 'sans-serif']
                         },
                         colors: {
-                            "brown": "#494327",
-                            "brown-dark":"#0a0a08",
-                            "brown-darker":"#030302",
-                            "brown-light": "#766a37",
-                            "brown-accent": "#968613",
-                            "brown-accent-light": "#f5f69f"
+                            "brown": "red",
+                            "brown-dark":"#115740",
+                            "brown-darker":"#115740",
+                            "brown-light": "#FFCD00",
+                            "brown-accent": "red",
+                            "brown-accent-light": "red",
+                            "black": "white",
+                            "zinc-300": "white",
+                            "gray-300": "white",
+
                         }
                     }
                 }
             }
         </script>
         <link rel="stylesheet" href="./../src/style.css">
+        <style>
+            ::selection {
+                background: #FFCD00;
+                color: black;
+            }
+
+            .ripple {
+                position: absolute;
+                background: rgba(205, 167, 14, 0.8) !important;
+                border-radius: 50%;
+                transform: scale(0);
+                animation: ripple 600ms linear;
+            }
+
+            .loader {
+                --c: linear-gradient(#FFCD00 0 0);
+                --r1: radial-gradient(farthest-side at bottom, #FFCD00 93%, #FFCD00);
+                --r2: radial-gradient(farthest-side at top, #FFCD00 93%, #FFCD00);
+            }
+        </style>
+        <nosnow></nosnow>
     </head>
     <body class="relative min-h-screen overflow-hidden box-border font-nunito bg-black text-zinc-300">
-        <!--TODO:content-->
-        <script src="./script.js"></script>
+        <div id="loader" class="fixed top-0 left-0 w-full h-full bg-[#115740] flex items-center justify-center z-[100] transition-all">
+            <div class="loader"></div>
+        </div>
+        <div class="h-[100vh]">
+            <div class="flex flex-row-reverse h-full w-full">
+                <div id="sidemenuContainer" class="flex flex-row-reversed text-white"></div>
+                <div class="flex h-full max-w-full flex-1 flex-col h-screen">
+                    <div class="z-10 flex flex-col py-3 px-4 bg-brown-darker transition-all opacity-1">
+                        <div id="navbar" class="w-full h-full flex flex-row-reverse justify-between items-center select-none"></div>
+                    </div>
+                    <div class="z-10 flex flex-col overflow-scroll relative h-screen">
+                        <div id="main" class="py-5 px-6 flex-1">
+                            <div class="flex flex-col gap-2">
+                                <div class="p-10 bg-brown-darker rounded-xl flex flex-col lg:flex-row w-full">
+                                    <div class="flex flex-col flex-1 items-center lg:items-start">
+                                        <h1 
+                                            popup 
+                                            fast 
+                                            class="flex flex-col md:flex-row gap-x-3 text-center lg:text-left flex warp text-4xl sm:text-6xl md:text-8xl font-nunitoblack font-black pb-2 leading-tight tracking-tight"
+                                        >Resume</h1>
+                                        <span 
+                                            popup 
+                                            extremelyFast 
+                                            class="text-md flex flex-row gap-x-1 flex-wrap justify-center text-center lg:text-left lg:justify-start items-center lg:items-start"
+                                        >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, molestias fuga unde amet magni nulla asperiores. Enim quasi libero, harum et, ipsa repudiandae, non dolor vitae quisquam obcaecati optio excepturi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, repudiandae accusantium, repellat rerum, ab repellendus in id hic quos dolorem debitis enim sint iste doloremque aliquid sequi magni itaque. Consequatur.</span>    
+                                    </div>
+                                </div>
+                                <div class="flex flex-row gap-2">
+                                    <div class="px-10 py-5 bg-brown-darker rounded-xl">
+                                        <!--Dropdown maybe?-->
+                                    </div>
+                                    <a class="cursor-pointer flex-1 text-center w-min select-none">
+                                        <div 
+                                            ripple 
+                                            class="relative overflow-hidden p-10 font-black bg-brown-dark hover:bg-brown-light hover:shadow-xl rounded-lg transition h-full flex items-center justify-center"
+                                        >
+                                            Placeholder
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div id="footer" class="bg-brown-darker select-none flex-2"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="./../src/script.js"></script>
+        <script src="./../src/third/facebook.snow.js"></script>
     </body>
 </html>
